[package]
name = "get-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
log4rs = { version = "1.1.1", features = ["all_components", "background_rotation", "gzip"] }
surf = { version = "2.3.2", default-features = false, features = [
    "encoding",
    "hyper-client",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }